syntax = "proto3";

option csharp_namespace = "MiniProject2.ServiceExam.Protos";

package exam;

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

// The greeting service definition.
service ExamProto {
  rpc GetAllExams (google.protobuf.Empty) returns (AllExamsReply);
  rpc GetExamById (google.protobuf.Int64Value) returns (ExamObj);
  rpc AddExam (ExamObj) returns (ExamObj);
}

message AllExamsReply {
  repeated ExamObj Exams = 1;
}

message ExamObj {
int64 Id = 1;
string Name = 2;
google.protobuf.Timestamp Date = 3;
repeated int64 StudentIds = 4;
}
